// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker.Basic icon 1`] = `
<div
  class="rc-picker-input"
>
  <input
    autocomplete="off"
    readonly=""
    size="12"
    title="1990-09-03"
    value="1990-09-03"
  />
  <span
    class="rc-picker-suffix"
  >
    <span
      class="suffix-icon"
    />
  </span>
  <span
    class="rc-picker-clear"
    role="button"
  >
    <span
      class="suffix-icon"
    />
  </span>
</div>
`;

exports[`Picker.Basic inputRender 1`] = `
<div
  class="rc-picker-input"
>
  <input
    autocomplete="off"
    readonly=""
    size="12"
    title=""
    value=""
  />
</div>
`;

exports[`Picker.Basic panelRender 1`] = `
[
  <div
    class="rc-picker"
  >
    <div
      class="rc-picker-input"
    >
      <input
        autocomplete="off"
        readonly=""
        size="12"
        title=""
        value=""
      />
    </div>
  </div>,
  <div>
    <div
      class="rc-picker-dropdown"
      style="opacity: 0;"
    >
      <div
        class="rc-picker-panel-container"
      >
        <h1>
          Light
        </h1>
      </div>
    </div>
  </div>,
]
`;

exports[`Picker.Basic pass data- & aria- & role 1`] = `
<div
  class="rc-picker"
>
  <div
    class="rc-picker-input"
  >
    <input
      aria-label="3334"
      autocomplete="off"
      data-test="233"
      readonly=""
      role="search"
      size="12"
      title=""
      value=""
    />
  </div>
</div>
`;

exports[`Picker.Basic should render correctly in rtl 1`] = `
<div
  class="rc-picker rc-picker-rtl"
>
  <div
    class="rc-picker-input"
  >
    <input
      autocomplete="off"
      readonly=""
      size="12"
      title=""
      value=""
    />
  </div>
</div>
`;
